@@ -31,6 +31,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -213,6 +214,8 @@ public class IpadicPreprocessor {
 			}
 
 		});
+
+		Arrays.sort(dictionaryFiles);
 
 		for (File dictionaryFile : dictionaryFiles) {
 
